Change to CSS to fix layout problem in left pane
Fixes layout problem to left pane

--- a/css/twopane.css
+++ b/css/twopane.css
@@ -142,7 +142,7 @@ h3, b{
   margin:-4px 0 5px 0;
   padding-left:8px;
   float:left;
-  width:279px;
+  width:277px;
 }
 
 .serviceWrapper > .dijitSliderH{
